--- a/SCORE KEEPER FORM EVENTS/styles.css
+++ b/SCORE KEEPER FORM EVENTS/styles.css
@@ -7,11 +7,7 @@
 body {
   justify-content: center;
   align-items: center;
-}
-
-h1,
-h2 {
-  margin: 1rem 0rem;
+  font-family: "Roboto", sans-serif;
 }
 
 .flex {
@@ -21,10 +17,34 @@ h2 {
 
 .image-header {
   max-width: 100%;
+  border-top: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .container {
-  max-height: 60vh;
-  max-width: 60vh;
   margin: 2rem 0rem;
+  background-color: #f0f0f0;
+  border-radius: 1rem;
+  max-width: 32rem;
+  min-width: 32rem;
+}
+
+.content-box {
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.select-container {
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.winner {
+  color: green;
+}
+
+.loser {
+  color: red;
 }
