--- a/SCORE KEEPER FORM EVENTS/styles.css
+++ b/SCORE KEEPER FORM EVENTS/styles.css
@@ -58,26 +58,18 @@ body {
   width: 7rem;
   aspect-ratio: 3;
   cursor: pointer;
+  color: #fff;
+  border: none;
 }
 
 button:nth-of-type(1) {
   background: #3498db;
-  color: #fff;
-  border: none;
 }
 button:nth-of-type(2n) {
   background: #e74c3c;
-  color: #fff;
-  border: none;
 }
 button:nth-of-type(3n) {
   background: #34495e;
-  color: #fff;
-  border: none;
-}
-
-button:nth-of-type(1):hover {
-  background: #2980b9;
 }
 
 button:nth-of-type(1):active {
@@ -96,6 +88,7 @@ button:nth-of-type(3n):active {
 select {
   background-color: #0563af;
   color: white;
-  padding: 0.2rem;
+  padding: 0.3rem;
   border: none;
+  border-radius: 0.2rem;
 }
